# OGU

./: .divide.py.swp  .gitignore  .script.py.swp  1.02.py  1.py  2.py  3.py  BarcodeFinder.py  CNAME  HISTORY.md  MANIFEST.in  Out  README  README.md  README.rst  TODO  Template.py  UI.py  a.sh  add_gene_name.py  addname.py  all_test.ps1  all_test.sh  annotate_contig.py  barcode.py  batch_query.py  blast.py  blastit.py  bop.py  build.ps1  build.py  build_primer3-py.ps1  build_win_package.ps1  convert.py  count.py  count_csv.py  count_same.py  createtable.py  curve.py  cutPrimer.py  (+95 more)
BarcodeFinder/: __main__.py  alignment.py  bf.py  cli.py  evaluate.py  gb2fasta.py  global_vars.py  init_db.py  organize.py  primer.py  ui.py  utils.py
BarcodeFinder/cli/: __init__.py  bf.py
BarcodeFinder/data/: animal_orders.csv  classes.csv  kingdoms.csv  phyla.csv
BarcodeFinder/web/: __init__.py  config.py  database.py  form.py  views.py
BarcodeFinder/web/templates/: base.html  form.html  index.html  job.html  post.html
OGU/: __main__.py  cli.py  evaluate.py  gb2fasta.py  global_vars.py  primer.py  ui.py  utils.py
OGU/data/: animal_orders.csv  classes.csv  kingdoms.csv  phyla.csv  superkingdoms.csv
Template/: Template.py  blast.py  print_time.py
bio/: settings.py  urls.py  view.py  wsgi.py
coursera/: guess.py
cp/: add_gb_info.py  add_xls_info.py  find_ambigious.py  import_csv.py  lookup.py  name.format  replace.py
mysite/: key
mysite/mysite/: settings.py
mysite/query/: admin.py  models.py
old/: addname.py  extractCDS.py
plot/: bar.py  dot.py  redox_potential.py  thesis.py
src/OGU/: __init__.py  __main__.py  cli.py  evaluate.py  gb2fasta.py  global_vars.py  primer.py  ui.py  utils.py  visualize.py
src/OGU/data/: angiosperm_cp_Evaluation.csv  animal_orders.csv  classes.csv  draw_circle_mitochondria.ipynb  draw_circle_plastid.ipynb  kingdoms.csv  phyla.csv  rodents_mt_Evaluation.csv  rodents_mt_extend.gb  superkingdoms.csv  tobacco_cp_extend.gb  visualize.py
tree_value/: draw.py
ui/: ui.output  ui.py  ui.tcl  ui_support - 副本.py  ui_support.py
