[project]
name = "OGU"
version = "1.25"
description = "Organelle Genome Utilities"
keywords = ['plastid', 'mitochondria', 'organelle genome', 'analysis',
    'Bioinformatics']
authors = [
    { name = "Ping Wu", email = "wpwupingwp@outlook.com" },
]
maintainers = [
    { name = "Ping Wu", email = "wpwupingwp@outlook.com" },
]
dependencies = [
    "setuptools>=69.0.3",
    "biopython==1.82",
    "certifi>=2023.11.17",
    "coloredlogs>=10.0",
    "matplotlib>=3.0.0",
    "numpy>=1.21.6",
    "primer3-py==2.0.1"
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    'Development Status :: 5 - Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Bio-Informatics'
]
[project.scripts]
ogu = 'OGU:main'
OGU = 'OGU:main'
[project.urls]
'Homepage' = 'https://github.com/wpwupingwp/OGU'
'Bug Tracker' = 'https://github.com/wpwupingwp/OGU/issues'
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"
