[project]
name = "OGU"
version = "1.80"
description = "Organelle Genome Utilities"
keywords = ['plastid', 'mitochondria', 'organelle genome', 'analysis',
    'Bioinformatics']
authors = [
    { name = "Ping Wu", email = "wpwupingwp@outlook.com" },
]
maintainers = [
    { name = "Ping Wu", email = "wpwupingwp@outlook.com" },
]
dependencies = [
    "biopython==1.82",
    "certifi>=2024.6.2",
    "coloredlogs>=10.0",
    "matplotlib>=3.0.0",
    "numpy>=1.21.6",
    "primer3-py==2.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Bio-Informatics'
]
[project.scripts]
ogu = 'OGU:main'
OGU = 'OGU:main'
update_db = 'OGU.utils:init_lineage'
[project.urls]
'Homepage' = 'https://github.com/wpwupingwp/OGU'
'Bug Tracker' = 'https://github.com/wpwupingwp/OGU/issues'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/OGU", "visualize"]

